# BasisLib

./: .gitignore  README.md  e3x_license.txt  pyproject.toml
BAEsislib/: __init__.py  config.py
BAEsislib/ops/: __init__.py  safe.py
BAEsislib/so3/: __init__.py  clebsch_gordan.py  clebsch_gordan_lut.py  common.py  normalization.py  spherical_harmonics.py  spherical_harmonics_lut.py
BasisLib/ops/: __init__.py
BasisLib/so3/: __init__.py  _clebsch_gordan_lut.npz  _spherical_harmonics_lut.npz  _wigner_d_lut.npz  clebsch_gordan.py  clebsch_gordan_lut.py  common.py  lookup_table_generation_utility.py  normalization.py  rotations.py  spherical_harmonics.py  spherical_harmonics_lut.py  symbolic.py  wigner_d_lookup_lut.py
test/: test_clebsch_gordan.py  test_commmon.py  test_rotations.py  test_spherical_harmonics.py  testing.py
